Adcionar visualização de Prescrições - BASIS-131379 (#172)
* JDL Prescrição Médica - BASIS-131379

* Códigos gerados pelo jhipster -  BASIS-131379

* Classe prescrição médica -  BASIS-131379

* Herdando a classe de prescrição médica - BASIS-131379

* Adicionando Contrutores - BASIS-131379

* Anotação @Inheritance para relacionamento com subclasses  - BASIS-131379

* Anotação lombok - BASIS-131379

* Herdando classe PrescricaoMedica - BASIS-131379

* Criando cargas fakes - BASIS-131379

* lombok - BASIS-131379

* Criando componente lista de prescrições - BASIS-131379

* Adicionando component no módulo - BASIS-131379

* Adicionando rota para componente de lista de prescrições - BASIS-131379

* Mudando rota ao clicar no botão - BASIS-131379

* Listando em ordem alfabetica - BASIS-131379

* Removendo botão prescrições e adicionando tooltip em pesquisar - BASIS-131379

* Adicionando breadcrumb - BASIS-131379

* Adiciona campos em prescricao medica e removendo campos repetidos - BASIS-131379

* removendo campos e adicionando fetchtype - BASIS-131379

* Remove campos idPaciente e observacao - BASIS-131379

* Adiciona campos - BASIS-131379

* Ajustes nas classes - BASIS-131379

* Lista prescrições por paciente - BASIS-131379

* Ajustando erros - BASIS-131379

* Ajustes - BASIS-131379

* Removendo relacionamento desnecessário - BASIS-131379

* Removendo getters e setters desnecessários - BASIS-131379

* Resolvendo erro StackOverflow - BASIS-131379

* Adicionando propriedade filter no dropdown - BASIS-131379

* Listagem de prescrições vindo do backend - BASIS-131379

* removendo imports - BASIS-131379

* adicionando path para prescricao-medica - BASIS-131379

* Adicionando service de prescrições ao módulo - BASIS-131379

* Adicion mensagem quando pesquisa no dropdown não existe - BASIS-131379

* Usando componente Treetable do primeng - BASIS-131379

* Serviço para retornar o nome do medicamento na API de fa

--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -5,13 +5,13 @@
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-12 ui-fluid">
                     <span class="md-inputfield">
-                        <input type="text" pInputText class="ui-inputtext" name="nome" [(ngModel)]="nome" #parametro />
+                        <input type="text" pInputText class="ui-inputtext" name="nome" pTooltip="Pesquisar Paciente por nome" [(ngModel)]="nome" #parametro />
                         <label>Nome paciente</label>
                     </span>
                 </div>
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-g-12 ui-md-6">
-                        <button pButton label="Pesquisar" icon="ui-icon-search" bTooltip="Pesquisar Paciente por Nome"
+                        <button pButton label="Pesquisar" icon="ui-icon-search" pTooltip="Pesquisar Paciente por Nome"
                             (click)="pesquisar()"></button>
                     </div>
                 </div>
@@ -35,6 +35,11 @@
                     <basis-datatable-button icon="assignment" name="prescrever-medicamento"
                         [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Medicamento"
                         class="ui-button-info">
+                    </basis-datatable-button>
+
+                    <basis-datatable-button icon="remove-red-eye" name="listar-prescricoes"
+                        [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Listar Prescrições"
+                        class="ui-button-success">
                     </basis-datatable-button>
 
                 </basis-datatable>
