--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -7,11 +7,16 @@
                 <form [formGroup]="prescricaoDieta">
                     <div class="ui-g">
                         <div class="ui-g-12">
-                            <div class="ui-g-12">
+                            <div class="ui-g-6">
                                 <span class="md-inputfield">
-                                    <input formControlName="nome" type="text" pInputText
-                                        disabled />
+                                    <input formControlName="nome" type="text" pInputText disabled />
                                     <label>Paciente</label>
+                                </span>
+                            </div>
+                            <div class="ui-g-6">
+                                <span class="md-inputfield">
+                                    <input formControlName="dataPrescricao" type="text" pInputText disabled />
+                                    <label>Data Prescrição</label>
                                 </span>
                             </div>
                         </div>
@@ -55,8 +60,10 @@
 
                             <div class="ui-g-12">
                                 <span class="md-inputfield">
-                                    <p-dropdown [autoWidth]="false" placeholder="Selecione..." [options]="tiposItens"
-                                        formControlName="tipoItemDietaId" required #descricaoItem>
+                                    <p-dropdown [autoWidth]="false" [filter]="true"
+                                        emptyFilterMessage="Nenhum registro encontrado." placeholder="Selecione..."
+                                        [options]="tiposItens" formControlName="tipoItemDieta" required
+                                        #descricaoItem>
                                     </p-dropdown>
                                     <label>Tipo Item</label>
                                 </span>
@@ -73,8 +80,9 @@
 
                             <div class="ui-g-6">
                                 <span class="md-inputfield">
-                                    <p-dropdown [autoWidth]="false" placeholder="Selecione..."
-                                        [options]="listaUnidadeDieta" formControlName="tipoUnidadeDietaId">
+                                    <p-dropdown [autoWidth]="false" [filter]="true"
+                                        emptyFilterMessage="Nenhum registro encontrado." placeholder="Selecione..."
+                                        [options]="listaUnidadeDieta" formControlName="tipoUnidadeDieta">
                                     </p-dropdown>
                                     <label>Unidade</label>
                                 </span>
@@ -92,9 +100,9 @@
 
                             <div class="ui-g-5">
                                 <span class="md-inputfield">
-                                    <p-dropdown [autoWidth]="false" placeholder="Selecione..."
-                                        [options]="tiposAprazamentos" formControlName="tipoAprazamentoId"
-                                        #descricaoAprazamento>
+                                    <p-dropdown [autoWidth]="false" placeholder="Selecione..." [filter]="true"
+                                        emptyFilterMessage="Nenhum registro encontrado." [options]="tiposAprazamentos"
+                                        formControlName="tipoAprazamento" #descricaoAprazamento>
                                     </p-dropdown>
                                     <label>Aprazamento</label>
                                 </span>
@@ -118,21 +126,21 @@
                         <div class="ui-g-12">
                             <basis-datatable type="memory" [value]="itensDieta" [disableView]="true"
                                 [disableEdit]="true" [disableDelete]="true">
-                                <p-column header="Item" field="tipoItemDietaId">
+                                <p-column header="Item" field="tipoItemDieta">
                                     <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
                                         <span>
                                             {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
                                     </ng-template>
                                 </p-column>
                                 <p-column header="Quantidade" field="quantidade"></p-column>
-                                <p-column header="Unidade" field="tipoUnidadeDietaId">
+                                <p-column header="Unidade" field="tipoUnidadeDieta">
                                     <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
                                         <span>
                                             {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].sigla }}</span>
                                     </ng-template>
                                 </p-column>
                                 <p-column header="Frequência" field="frequencia"></p-column>
-                                <p-column header="Aprazamento" field="tipoAprazamentoId">
+                                <p-column header="Aprazamento" field="tipoAprazamento">
                                     <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
                                         <span>
                                             {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
