--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -81,7 +81,7 @@
                                         <p-dropdown
                                             formControlName="clinicaId"
                                             [options]="clinicas"
-                                            optionLabel="nome"
+                                            optionLabel="descricao"
                                             placeholder="Clínica"
                                             pTooltip="Selecione a clinica refente a esta especialidade."
                                         ></p-dropdown>
