--- a/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
+++ b/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
@@ -16,7 +16,10 @@
 
                                 <div class="ui-g-6">
                                     <span class="md-inputfield">
-                                        <input formControlName="dataPrescricao" type="text" pInputText disabled />
+                                        <p-calendar
+                                        [locale]="calendarLocale"
+                                        formControlName="dataPrescricao"
+                                    ></p-calendar>
                                         <label>Data Prescrição</label>
                                     </span>
                                 </div>
