--- a/frontend/src/app/internacao/cadastro-clinicas/clinica/clinica.component.html
+++ b/frontend/src/app/internacao/cadastro-clinicas/clinica/clinica.component.html
@@ -1,5 +1,112 @@
-<div>
-     <div>
-
+<div class="ui-g ui-fluid">
+    <div class="ui-g-12">
+        <form (ngSubmit)="cadastrar()">
+            <p-accordion>
+                <p-accordionTab header="Cadastrar Clínicas" [selected]="true">
+                    <form [formGroup]="clinica">
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <div class="ui-g-4 ui-sm-12">
+                                    <span class="ui-float-label">
+                                        <input
+                                            type="text"
+                                            pInputText
+                                            pTooltip="Digite a capacidade referencial."
+                                            formControlName="capacidadeReferencial"
+                                        />
+                                        <label>Capacidade Referencial</label>
+                                    </span>
+                                </div>
+                                <div class="ui-g-8 ui-sm-12">
+                                    <span class="ui-float-label">
+                                        <input
+                                            type="text"
+                                            pInputText
+                                            pTooltip="Digite o número do sus da clínica."
+                                            formControlName="numeroSUS"
+                                        />
+                                        <label>Número do SUS</label>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-12 sm-12">
+                                    <span class="ui-float-label">
+                                        <textarea
+                                            pInputTextarea
+                                            rows="3"
+                                            formControlName="descricao"
+                                        >
+                                        </textarea>
+                                        <label>Descrição</label>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </p-accordionTab>
+                <p-accordionTab header="Internação">
+                    <form [formGroup]="clinica">
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <div class="ui-g-3 ui-sm-12">
+                                    <span class="ui-float-label">
+                                        <input
+                                            type="text"
+                                            pInputText
+                                            pTooltip="Digite a idade mínima para internação."
+                                            formControlName="idadeMinimaInternacao"
+                                        />
+                                        <label>Idade Mínima</label>
+                                    </span>
+                                </div>
+                                <div class="ui-g-3 ui-sm-12">
+                                    <span class="ui-float-label">
+                                        <input
+                                            type="text"
+                                            pInputText
+                                            pTooltip="Digite a idade máxima para internação."
+                                            formControlName="idadeMaximaInternacao"
+                                        />
+                                        <label>Idade Máxima</label>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </p-accordionTab>
+                <p-accordionTab header="Ambulatório">
+                    <form [formGroup]="clinica">
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <div class="ui-g-3 ui-sm-12">
+                                    <span class="ui-float-label">
+                                        <input
+                                            type="text"
+                                            pInputText
+                                            pTooltip="Digite a idade mínima para ambulatório."
+                                            formControlName="idadeMinimaAmbulatorio"
+                                        />
+                                        <label>Idade Mínima</label>
+                                    </span>
+                                </div>
+                                <div class="ui-g-3 ui-sm-12">
+                                    <span class="ui-float-label">
+                                        <input
+                                            type="text"
+                                            pInputText
+                                            pTooltip="Digite a idade máxima para ambulatório."
+                                            formControlName="idadeMaximaAmbulatorio"
+                                        />
+                                        <label>Idade Máxima</label>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </p-accordionTab>
+            </p-accordion>
+            <button pButton type="submit" label="Cadastrar"></button>
+        </form>
     </div>
 </div>
