Criando service para cadastro de clínicas

--- a/frontend/src/app/internacao/cadastro-clinicas/clinica/clinica.component.html
+++ b/frontend/src/app/internacao/cadastro-clinicas/clinica/clinica.component.html
@@ -106,7 +106,7 @@
                     </form>
                 </p-accordionTab>
             </p-accordion>
-            <button pButton type="submit" label="Cadastrar"></button>
+            <button pButton type="submit" [disabled]="!valid()" label="Cadastrar"></button>
         </form>
     </div>
 </div>
