Insere Popover no calendário

--- a/frontend/src/app/consulta/components/emergencia/emergencia.component.html
+++ b/frontend/src/app/consulta/components/emergencia/emergencia.component.html
@@ -30,6 +30,14 @@
                     <label>Grade</label>
                 </span>
             </div>
+            <div class="ui-g-4 ui-sm-12">
+                <p-button
+                    label="Acessar Calendário"
+                    icon="pi pi-calendar"
+                    type="button"
+                    [routerLink]="['/consulta/consulta-calendario']"
+                ></p-button>
+            </div>
 
             <div class="ui-g-12"></div>
             <div class="ui-g-2 ui-sm-12">
