--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -5,7 +5,8 @@
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-12 ui-fluid">
                     <span class="md-inputfield">
-                        <input type="text" pInputText class="ui-inputtext" name="nome" pTooltip="Pesquisar Paciente por nome" [(ngModel)]="nome" #parametro />
+                        <input type="text" pInputText class="ui-inputtext" name="nome"
+                            pTooltip="Pesquisar Paciente por nome" [(ngModel)]="nome" #parametro />
                         <label>Nome paciente</label>
                     </span>
                 </div>
@@ -34,6 +35,11 @@
 
                     <basis-datatable-button icon="assignment" name="prescrever-medicamento"
                         [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Medicamento"
+                        class="ui-button-info">
+                    </basis-datatable-button>
+
+                    <basis-datatable-button icon="queue-play-next" name="prescrever-diagnostico"
+                        [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Diagnóstico"
                         class="ui-button-info">
                     </basis-datatable-button>
 
