Ajuste código e adicionando fomart para data de Prescrição - BASIS-136408

--- a/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
+++ b/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
@@ -16,10 +16,8 @@
 
                                 <div class="ui-g-6">
                                     <span class="md-inputfield">
-                                        <p-calendar
-                                        [locale]="calendarLocale"
-                                        formControlName="dataPrescricao"
-                                    ></p-calendar>
+                                        <p-calendar [locale]="calendarLocale" formControlName="dataPrescricao"
+                                            dateFormat="dd/mm/yy" disabled="true"></p-calendar>
                                         <label>Data Prescrição</label>
                                     </span>
                                 </div>
