--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -15,7 +15,8 @@
                             </div>
                             <div class="ui-g-6">
                                 <span class="md-inputfield">
-                                    <p-calendar [locale]="calendarLocale" formControlName="dataPrescricao" disabled>
+                                    <p-calendar [locale]="calendarLocale" formControlName="dataPrescricao"
+                                        dateFormat="dd/mm/yy" disabled="true">
                                     </p-calendar>
                                     <label>Data Prescrição</label>
                                 </span>
