--- a/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
+++ b/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
@@ -1,62 +1,42 @@
 <div class="ui-g ui-fluid">
-    <form [formGroup]="detalharConsultas">
+    <form [formGroup]="detalharConsultas" disabled="true">
         <div class="ui-g-12">
             <h1>Detalhamento de Consultas</h1>
 
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <input pInputText formControlName="prontuario" disabled="true" />
-                    <label>Prontuário</label>
-                </span>
-            </div>
-            <div class="ui-g-5 ui-sm-12">
-                <span class="ui-float-label">
-                    <p-autoComplete
-                        field="nome"
-                        pInputText
-                        formControlName="nome"
-                        (completeMethod)="buscarPacientesPorId(id)"
-                    ></p-autoComplete>
-                    <label>Nome</label>
-                    <!-- (onSelect)="aoSelecionarPaciente($event)" -->
-                </span>
-            </div>
-            <div class="ui-g-12"></div>
-
             <div class="ui-g-3 ui-sm-12">
                 <span class="ui-float-label">
-                    <input pInputText formControlName="dataHoraDaConsulta" readonly />
+                    <input type="text" pInputText formControlName="dataHoraDaConsulta" />
                     <label>Data/Hora da Consulta</label>
                 </span>
             </div>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <input pInputText formControlName="grade" readonly />
+                    <input type="text" pInputText formControlName="grade" />
                     <label>Grade</label>
                 </span>
             </div>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <input pInputText formControlName="numeroSala" readonly />
+                    <input type="text" pInputText formControlName="numeroSala" />
                     <label>Número da Sala</label>
                 </span>
             </div>
             <div class="ui-g-12"></div>
             <div class="ui-g-3 ui-sm-12">
                 <span class="ui-float-label">
-                    <input pInputText formControlName="turno" readonly />
+                    <input type="text" pInputText formControlName="turno" />
                     <label>Turno</label>
                 </span>
             </div>
             <div class="ui-g-4 ui-sm-12">
                 <span class="ui-float-label">
-                    <input pInputText formControlName="tipoPagador" readonly />
+                    <input type="text" pInputText formControlName="tipoPagador" />
                     <label>Tipo Pagador</label>
                 </span>
             </div>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <input pInputText formControlName="clinicaCentralId" readonly />
+                    <input type="text" pInputText formControlName="clinicaCentralId" />
                     <label>Clinica Central</label>
                 </span>
             </div>
@@ -69,7 +49,6 @@
                         pInputTextarea
                         autoResize="autoResize"
                         formControlName="justificativa"
-                        readonly
                     ></textarea>
                     <label>Justificativa</label>
                 </span>
@@ -83,8 +62,6 @@
                         pInputTextarea
                         autoResize="autoResize"
                         formControlName="observacoes"
-                        oninvalid="alert('You must fill out the form!');"
-                        readonly
                     ></textarea>
                     <label>Observações</label>
                 </span>
