Arrumando erro na listagem de prescrições

--- a/frontend/src/app/prescricao-medica/lista-prescricao/lista-prescricao.component.html
+++ b/frontend/src/app/prescricao-medica/lista-prescricao/lista-prescricao.component.html
@@ -15,7 +15,7 @@
                     {{rowData.name}}
                 </td>
                 <td>
-                    {{rowData.descricao}}
+                    {{rowData?.descricao}}
 
                 </td>
                 <td>
