--- a/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
+++ b/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
@@ -11,12 +11,12 @@
             </div>
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
-                    <p-autoComplete
+                    <input
                         field="nome"
                         pInputText
                         formControlName="nome"
                         (completeMethod)="buscarPacientesPorId(id)"
-                    ></p-autoComplete>
+                    />
                     <label>Nome</label>
                     <!-- (onSelect)="aoSelecionarPaciente($event)" -->
                 </span>
