--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -15,7 +15,9 @@
                             </div>
                             <div class="ui-g-6">
                                 <span class="md-inputfield">
-                                    <input formControlName="dataPrescricao" type="text" pInputText disabled />
+                                    <p-calendar [locale]="calendarLocale" formControlName="dataPrescricao"
+                                        dateFormat="dd/mm/yy" disabled="true">
+                                    </p-calendar>
                                     <label>Data Prescrição</label>
                                 </span>
                             </div>
@@ -62,8 +64,7 @@
                                 <span class="md-inputfield">
                                     <p-dropdown [autoWidth]="false" [filter]="true"
                                         emptyFilterMessage="Nenhum registro encontrado." placeholder="Selecione..."
-                                        [options]="tiposItens" formControlName="tipoItemDieta" required
-                                        #descricaoItem>
+                                        [options]="tiposItens" formControlName="tipoItemDieta" required #descricaoItem>
                                     </p-dropdown>
                                     <label>Tipo Item</label>
                                 </span>
