--- a/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
+++ b/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
@@ -16,7 +16,8 @@
 
                                 <div class="ui-g-6">
                                     <span class="md-inputfield">
-                                        <input formControlName="dataPrescricao" type="text" pInputText disabled />
+                                        <p-calendar [locale]="calendarLocale" formControlName="dataPrescricao"
+                                            dateFormat="dd/mm/yy" disabled="true"></p-calendar>
                                         <label>Data Prescrição</label>
                                     </span>
                                 </div>
