--- a/frontend/src/app/suprimentos/components/consulta-estoque/consulta-estoque.component.html
+++ b/frontend/src/app/suprimentos/components/consulta-estoque/consulta-estoque.component.html
@@ -3,124 +3,153 @@
         <div class="card card-w-title">
             <h1>Consultar Estoque</h1>
             <div class="ui-g">
-                <div class="ui-g-12">
-                    <div class="ui-g-3">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <p-autoComplete
-                                [suggestions]="almoxarifados"
-                                (completeMethod)="obterAlmoxarifadoPorDescricao($event.query)"
-                                [forceSelection]="true"
-                                [dropdown]="true"
-                                field="descricao"
-                            ></p-autoComplete>
-                            <label>Almoxarifado</label>
-                        </span>
-                    </div>
-                    <div class="ui-g-3">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <p-autoComplete
-                                [suggestions]="fornecedores"
-                                (completeMethod)="getFornecedoresPorNomeFantasia($event.query)"
-                                [forceSelection]="true"
-                                [dropdown]="true"
-                                field="nomeFantasia"
-                            ></p-autoComplete>
-                            <label>Fornecedor</label>
-                        </span>
-                    </div>
-                </div>
-                <div class="ui-g-12">
-                    <div class="ui-g-2">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <p-autoComplete
-                                [suggestions]="materiais"
-                                (completeMethod)="obterMateriaisPorNome($event.query)"
-                                [forceSelection]="true"
-                                [dropdown]="true"
-                                field="nome"
-                            ></p-autoComplete>
-                            <label>Material</label>
-                        </span>
-                    </div>
-                    <div class="ui-g-2">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <input type="text" pInputText class="ui-inputtext" disabled />
-                            <label>Termo Livre</label>
-                        </span>
-                    </div>
-                    <div class="ui-g-1">
-                        <label>Estocável</label>
-                        <div class="ui-g-12">
-                            <p-radioButton
-                                name="estocavel"
-                                [value]="true"
-                                label="Sim"
-                            ></p-radioButton>
+                <form [formGroup]="consultaForm">
+                    <div class="ui-g-12">
+                        <div class="ui-g-3">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <p-autoComplete
+                                    [suggestions]="almoxarifados"
+                                    (completeMethod)="obterAlmoxarifadoPorDescricao($event.query)"
+                                    [forceSelection]="true"
+                                    [dropdown]="true"
+                                    formControlName="almoxarifado"
+                                    field="descricao"
+                                ></p-autoComplete>
+                                <label>Almoxarifado</label>
+                            </span>
                         </div>
-                        <div class="ui-g-12">
-                            <p-radioButton
-                                name="estocavel"
-                                [value]="false"
-                                label="Não"
-                            ></p-radioButton>
+                        <div class="ui-g-3">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <p-autoComplete
+                                    [suggestions]="fornecedores"
+                                    (completeMethod)="getFornecedoresPorNomeFantasia($event.query)"
+                                    [forceSelection]="true"
+                                    [dropdown]="true"
+                                    formControlName="fornecedor"
+                                    field="nomeFantasia"
+                                ></p-autoComplete>
+                                <label>Fornecedor</label>
+                            </span>
                         </div>
                     </div>
-                    <div class="ui-g-1">
-                        <label>Ativo</label>
-                        <div class="ui-g-12">
-                            <p-radioButton name="ativo" [value]="true" label="Sim"></p-radioButton>
+                    <div class="ui-g-12">
+                        <div class="ui-g-2">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <p-autoComplete
+                                    [suggestions]="materiais"
+                                    (completeMethod)="obterMateriaisPorNome($event.query)"
+                                    [forceSelection]="true"
+                                    [dropdown]="true"
+                                    formControlName="material"
+                                    field="nome"
+                                ></p-autoComplete>
+                                <label>Material</label>
+                            </span>
                         </div>
-                        <div class="ui-g-12">
-                            <p-radioButton name="ativo" [value]="false" label="Não"></p-radioButton>
+                        <div class="ui-g-2">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <input type="text" pInputText class="ui-inputtext" disabled />
+                                <label>Termo Livre</label>
+                            </span>
+                        </div>
+                        <div class="ui-g-1">
+                            <label>Estocável</label>
+                            <div class="ui-g-12">
+                                <p-radioButton
+                                    name="estocavel"
+                                    [value]="true"
+                                    label="Sim"
+                                    formControlName="estocavel"
+                                ></p-radioButton>
+                            </div>
+                            <div class="ui-g-12">
+                                <p-radioButton
+                                    name="estocavel"
+                                    [value]="false"
+                                    formControlName="estocavel"
+                                    label="Não"
+                                ></p-radioButton>
+                            </div>
+                        </div>
+                        <div class="ui-g-1">
+                            <label>Ativo</label>
+                            <div class="ui-g-12">
+                                <p-radioButton
+                                    name="ativo"
+                                    [value]="true"
+                                    label="Sim"
+                                    formControlName="ativo"
+                                ></p-radioButton>
+                            </div>
+                            <div class="ui-g-12">
+                                <p-radioButton
+                                    name="ativo"
+                                    [value]="false"
+                                    label="Não"
+                                    formControlName="ativo"
+                                ></p-radioButton>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="ui-g-12">
-                    <div class="ui-g-2">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <p-autoComplete
-                                [suggestions]="null"
-                                (completeMethod)="(null)"
-                                [forceSelection]="true"
-                                [dropdown]="true"
-                                field="descricao"
-                            ></p-autoComplete>
-                            <label>Unidade</label>
-                        </span>
+                    <div class="ui-g-12">
+                        <div class="ui-g-2">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <p-autoComplete
+                                    [suggestions]="unidadesMedida"
+                                    (completeMethod)="obterUnidadeMedidaPorDescricao($event.query)"
+                                    [forceSelection]="true"
+                                    [dropdown]="true"
+                                    formControlName="unidade"
+                                    field="descricao"
+                                ></p-autoComplete>
+                                <label>Unidade</label>
+                            </span>
+                        </div>
+                        <div class="ui-g-2">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <p-autoComplete
+                                    [suggestions]="grupos"
+                                    (completeMethod)="obterGruposPorDescricao($event.query)"
+                                    [forceSelection]="true"
+                                    [dropdown]="true"
+                                    formControlName="grupo"
+                                    field="descricao"
+                                ></p-autoComplete>
+                                <label>Grupo</label>
+                            </span>
+                        </div>
+                        <div class="ui-g-2">
+                            <span class="md-inputfield" style="margin-top: 5px;">
+                                <p-autoComplete
+                                    [suggestions]="classificacoes"
+                                    (completeMethod)="getClassificacoesPorDescricao($event.query)"
+                                    [dropdown]="true"
+                                    formControlName="classificacao"
+                                    field="descricao"
+                                ></p-autoComplete>
+                                <label>Classificação Material</label>
+                            </span>
+                        </div>
                     </div>
-                    <div class="ui-g-2">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <p-autoComplete
-                                [suggestions]="grupos"
-                                (completeMethod)="obterGruposPorDescricao($event.query)"
-                                [forceSelection]="true"
-                                [dropdown]="true"
-                                field="descricao"
-                            ></p-autoComplete>
-                            <label>Grupo</label>
-                        </span>
-                    </div>
-                    <div class="ui-g-2">
-                        <span class="md-inputfield" style="margin-top: 5px;">
-                            <p-autoComplete
-                                [suggestions]="classificacoes"
-                                (completeMethod)="getClassificacoesPorDescricao($event.query)"
-                                [dropdown]="true"
-                                field="descricao"
-                            ></p-autoComplete>
-                            <label>Classificação Material</label>
-                        </span>
-                    </div>
-                </div>
+                </form>
                 <div class="ui-g-12">
                     <div class="ui-g-2"></div>
-                    <div class="ui-g-6">
+                    <div class="ui-g-3">
                         <button
                             pButton
                             type="button"
                             label="Pesquisar"
                             icon="ui-icon-search"
-                            (click)="datatable.refresh('')"
+                            (click)="datatable.refresh(consultaForm.value)"
+                        ></button>
+                    </div>
+                    <div class="ui-g-3">
+                        <button
+                            pButton
+                            type="button"
+                            label="Limpar"
+                            icon="ui-icon-minus"
+                            (click)="limpar()"
                         ></button>
                     </div>
                 </div>
