Adiciona botao e rota para prescrição procedimento

--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -35,15 +35,16 @@
                         class="ui-button-info">
                     </basis-datatable-button>
 
-                    <basis-datatable-button icon="assignment" name="prescrever-medicamento"
+                    <basis-datatable-button icon="add-box" name="prescrever-medicamento"
                         [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Medicamento"
                         class="ui-button-info">
                     </basis-datatable-button>
 
-                    <basis-datatable-button icon="laptop-chromebook" name="prescrever-procedimento" [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Procedimento Especial"
+                    <basis-datatable-button icon="control-point" name="prescrever-procedimento" [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Procedimento Especial"
                         class="ui-button-info">
+                    </basis-datatable-button>
 
-                    <basis-datatable-button icon="queue-play-next" name="prescrever-diagnostico"
+                    <basis-datatable-button icon="assignment" name="prescrever-diagnostico"
                         [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Diagnóstico"
                         class="ui-button-info">
                     </basis-datatable-button>
