Cadastro e listagem de procedimento especial - BASIS-137410

--- a/frontend/src/app/prescricao-medica/lista-prescricao/lista-prescricao.component.html
+++ b/frontend/src/app/prescricao-medica/lista-prescricao/lista-prescricao.component.html
@@ -19,7 +19,7 @@
 
                 </td>
                 <td>
-                    {{rowData.dataPrescricao | date: 'dd/MM/yyyy'}}
+                    {{rowData?.dataPrescricao | date: 'dd/MM/yyyy'}}
                 </td>
             </tr>
         </ng-template>
