--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
@@ -3,7 +3,7 @@
         <div class="ui-g-6">
             <span class="md-inputfield">
                 <p-dropdown placeholder="Selecione..." [options]="listaCirurgiasLeito" formControlName="tipoProcedimentoId" required
-                    #especiaisDiversos>
+                    #cirurgias>
                 </p-dropdown>
                 <label>Cirugias Leito</label>
             </span>
