--- a/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
+++ b/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
@@ -11,12 +11,7 @@
             </div>
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
-                    <input
-                        field="nome"
-                        pInputText
-                        formControlName="nome"
-                        (completeMethod)="buscarPacientesPorId(id)"
-                    />
+                    <input field="nome" pInputText formControlName="nome" />
                     <label>Nome</label>
                     <!-- (onSelect)="aoSelecionarPaciente($event)" -->
                 </span>
