Corrige erro de compilação

--- a/frontend/src/app/internacao/components/solicitacao-de-internacao/solicitacao-de-internacao.component.html
+++ b/frontend/src/app/internacao/components/solicitacao-de-internacao/solicitacao-de-internacao.component.html
@@ -2,7 +2,7 @@
     <p-fieldset legend="Solicitação de Internação">
         <form [formGroup]="formGroup">
             <div class="ui-g-12">
-                <app-card-paciente [prontuario]="pacienteId"></app-card-paciente>
+                <app-card-paciente [prontuario]="paciente.id"></app-card-paciente>
             </div>
             <!-- Data Provável Intenação* & Data Provável Cirurgia & Prioridade* -->
             <div class="ui-g-12">
