Corrigir erros de compilação - BASIS-130784

--- a/frontend/src/app/pacientes/formulario/paciente-form-dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-form-dados-pessoais.component.html
@@ -18,7 +18,7 @@
         <div madreCalendar label="Data de Nascimento" formControlName="dataDeNascimento" class="ui-g-2 ui-sm-12" (onSelect)="aoSelecionarDataDeNascimento()" (onBlur)="aoSelecionarDataDeNascimento()"></div>
         <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
-                <p-calendar timeOnly="true" formControlName="horaDoNascimento"></p-calendar>
+                <p-calendar timeOnly="true" formControlName="horaDeNascimento"></p-calendar>
                 <label>Hora do Nascimento</label>
             </span>
         </div>
