--- a/frontend/src/app/shared/components/check.component.html
+++ b/frontend/src/app/shared/components/check.component.html
@@ -1,4 +1,4 @@
-<span #notification form-notification class="ui-g-12" [name]="name" [form]="form">
+<span #notification form-notification class="ui-g-12">
     <div class="ui-g-4">
         <label [innerHTML]="label"></label>
     </div>
