--- a/frontend/src/app/shared/components/dropdown.component.html
+++ b/frontend/src/app/shared/components/dropdown.component.html
@@ -1,4 +1,4 @@
-<span #notification form-notification class="md-inputfield" [name]="name" [form]="form">
+<span #notification form-notification class="md-inputfield">
     <p-dropdown #input
         [formControl]="formControl"
         [options]="options"
