Corrigindo opção de editar em Telefones

--- a/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
@@ -9,11 +9,13 @@
         <p-button
             label="Adicionar"
             [disabled]="telefone.invalid"
+            [disabled]="controle ? true : null"
             type="button"
             (onClick)="adicionarTelefoneALista()"></p-button>
     </div>
-    <div *ngIf="!telefone.value.indice">
+    <div *ngIf="controle">
         <p-button
+        [disabled]="telefone.invalid"
         label="Editar"
         type="button"
         (onClick)="atualizarEdicao()"
